Sync changes in `it` module with Beam repository.